--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 ﻿backend:
   name: git-gateway
-  branch: main  # 替换成你网站主分支
+  branch: main  # 你的 GitHub 主分支
 
 media_folder: "images"
 public_folder: "/images"
@@ -13,5 +13,7 @@ collections:
     slug: "{{slug}}"
     fields:
       - { label: "Name", name: "name", widget: "string" }
-      - { label: "Price", name: "price", widget: "string" }
-      - { label: "Image", name: "img", widget: "image" }
+      - { label: "Price", name: "price", widget: "number" }  # 用 number 更合理
+      - { label: "Images", name: "imgs", widget: "list", allow_add: true } # 支持多图
+      - { label: "Tags", name: "tags", widget: "list", allow_add: true }
+      - { label: "Description", name: "desc", widget: "string" }
